--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@sveltejs/adapter-static": "^3.0.1",
 		"@threlte/core": "^7.3.0",
 		"@threlte/extras": "^8.11.2",
 		"three": "^0.163.0"
